// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Button DOM snapshot > danger variant 1`] = `
<button
  class="inline-flex items-center justify-center gap-nc-xs rounded-nc-md border-[1.5px] border-transparent font-medium cursor-pointer whitespace-nowrap no-underline select-none transition-all duration-[120ms] ease-in-out focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-nc-border-focus disabled:cursor-not-allowed disabled:opacity-40 bg-nc-danger-default border-nc-danger-default text-nc-content-on-danger hover:bg-nc-danger-hover hover:border-nc-danger-hover text-[0.9375rem] px-nc-md py-nc-sm min-h-[2.75rem]"
>
  Delete
</button>
`;

exports[`Button DOM snapshot > disabled state 1`] = `
<button
  class="inline-flex items-center justify-center gap-nc-xs rounded-nc-md border-[1.5px] border-transparent font-medium cursor-pointer whitespace-nowrap no-underline select-none transition-all duration-[120ms] ease-in-out focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-nc-border-focus disabled:cursor-not-allowed disabled:opacity-40 bg-nc-accent-default border-nc-accent-default text-nc-content-on-accent hover:bg-nc-accent-hover hover:border-nc-accent-hover active:bg-nc-accent-active active:border-nc-accent-active text-[0.9375rem] px-nc-md py-nc-sm min-h-[2.75rem]"
  disabled=""
>
  Disabled
</button>
`;

exports[`Button DOM snapshot > primary variant 1`] = `
<button
  class="inline-flex items-center justify-center gap-nc-xs rounded-nc-md border-[1.5px] border-transparent font-medium cursor-pointer whitespace-nowrap no-underline select-none transition-all duration-[120ms] ease-in-out focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-nc-border-focus disabled:cursor-not-allowed disabled:opacity-40 bg-nc-accent-default border-nc-accent-default text-nc-content-on-accent hover:bg-nc-accent-hover hover:border-nc-accent-hover active:bg-nc-accent-active active:border-nc-accent-active text-[0.9375rem] px-nc-md py-nc-sm min-h-[2.75rem]"
>
  Save
</button>
`;

exports[`Button DOM snapshot > secondary variant 1`] = `
<button
  class="inline-flex items-center justify-center gap-nc-xs rounded-nc-md border-[1.5px] border-transparent font-medium cursor-pointer whitespace-nowrap no-underline select-none transition-all duration-[120ms] ease-in-out focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-nc-border-focus disabled:cursor-not-allowed disabled:opacity-40 bg-transparent border-nc-border-interactive text-nc-content-primary hover:bg-nc-surface-subtle active:bg-nc-surface-subtle active:border-nc-accent-default text-[0.9375rem] px-nc-md py-nc-sm min-h-[2.75rem]"
>
  Cancel
</button>
`;

exports[`ThemeSwitcher snapshot > renders correctly in dark mode 1`] = `
<div
  aria-label="Appearance settings"
  class="_container_e7ffc6"
  role="group"
>
  <fieldset
    class="_fieldset_e7ffc6"
  >
    <legend
      class="_legend_e7ffc6"
    >
      Colour mode
    </legend>
    <div
      aria-label="Colour mode"
      class="_modeButtons_e7ffc6"
      role="radiogroup"
    >
      <label
        class="_modeLabel_e7ffc6"
      >
        <input
          class="_hiddenRadio_e7ffc6"
          name="theme-mode"
          type="radio"
          value="light"
        />
        <span
          class="_modeButton_e7ffc6"
        >
          <span
            aria-hidden="true"
            class="_modeIcon_e7ffc6"
          >
            ☀️
          </span>
          <span>
            Light
          </span>
        </span>
      </label>
      <label
        class="_modeLabel_e7ffc6"
      >
        <input
          checked=""
          class="_hiddenRadio_e7ffc6"
          name="theme-mode"
          type="radio"
          value="dark"
        />
        <span
          class="_modeButton_e7ffc6 _modeButtonActive_e7ffc6"
        >
          <span
            aria-hidden="true"
            class="_modeIcon_e7ffc6"
          >
            🌙
          </span>
          <span>
            Dark
          </span>
        </span>
      </label>
      <label
        class="_modeLabel_e7ffc6"
      >
        <input
          class="_hiddenRadio_e7ffc6"
          name="theme-mode"
          type="radio"
          value="system"
        />
        <span
          class="_modeButton_e7ffc6"
        >
          <span
            aria-hidden="true"
            class="_modeIcon_e7ffc6"
          >
            💻
          </span>
          <span>
            System
          </span>
        </span>
      </label>
    </div>
  </fieldset>
  <fieldset
    class="_fieldset_e7ffc6"
  >
    <legend
      class="_legend_e7ffc6"
    >
      Colour palette
    </legend>
    <div
      aria-label="Colour palette"
      class="_paletteSwatches_e7ffc6"
      role="radiogroup"
    >
      <label
        title="Default – Calm indigo/violet tones"
      >
        <input
          aria-label="Default palette – Calm indigo/violet tones"
          checked=""
          class="_hiddenRadio_e7ffc6"
          name="palette"
          type="radio"
          value="default"
        />
        <span
          aria-hidden="true"
          class="_paletteSwatch_e7ffc6 _paletteSwatchActive_e7ffc6"
          style="--swatch-accent: #4f46e5; --swatch-accent-light: #ede9fe;"
        />
      </label>
      <label
        title="Ocean – Cool teal and cyan tones"
      >
        <input
          aria-label="Ocean palette – Cool teal and cyan tones"
          class="_hiddenRadio_e7ffc6"
          name="palette"
          type="radio"
          value="ocean"
        />
        <span
          aria-hidden="true"
          class="_paletteSwatch_e7ffc6"
          style="--swatch-accent: #0891b2; --swatch-accent-light: #cffafe;"
        />
      </label>
      <label
        title="Forest – Warm green and emerald tones"
      >
        <input
          aria-label="Forest palette – Warm green and emerald tones"
          class="_hiddenRadio_e7ffc6"
          name="palette"
          type="radio"
          value="forest"
        />
        <span
          aria-hidden="true"
          class="_paletteSwatch_e7ffc6"
          style="--swatch-accent: #059669; --swatch-accent-light: #dcfce7;"
        />
      </label>
      <label
        title="Sunset – Warm amber and orange tones"
      >
        <input
          aria-label="Sunset palette – Warm amber and orange tones"
          class="_hiddenRadio_e7ffc6"
          name="palette"
          type="radio"
          value="sunset"
        />
        <span
          aria-hidden="true"
          class="_paletteSwatch_e7ffc6"
          style="--swatch-accent: #d97706; --swatch-accent-light: #fffbeb;"
        />
      </label>
    </div>
  </fieldset>
</div>
`;

exports[`ThemeSwitcher snapshot > renders correctly in light mode 1`] = `
<div
  aria-label="Appearance settings"
  class="_container_e7ffc6"
  role="group"
>
  <fieldset
    class="_fieldset_e7ffc6"
  >
    <legend
      class="_legend_e7ffc6"
    >
      Colour mode
    </legend>
    <div
      aria-label="Colour mode"
      class="_modeButtons_e7ffc6"
      role="radiogroup"
    >
      <label
        class="_modeLabel_e7ffc6"
      >
        <input
          checked=""
          class="_hiddenRadio_e7ffc6"
          name="theme-mode"
          type="radio"
          value="light"
        />
        <span
          class="_modeButton_e7ffc6 _modeButtonActive_e7ffc6"
        >
          <span
            aria-hidden="true"
            class="_modeIcon_e7ffc6"
          >
            ☀️
          </span>
          <span>
            Light
          </span>
        </span>
      </label>
      <label
        class="_modeLabel_e7ffc6"
      >
        <input
          class="_hiddenRadio_e7ffc6"
          name="theme-mode"
          type="radio"
          value="dark"
        />
        <span
          class="_modeButton_e7ffc6"
        >
          <span
            aria-hidden="true"
            class="_modeIcon_e7ffc6"
          >
            🌙
          </span>
          <span>
            Dark
          </span>
        </span>
      </label>
      <label
        class="_modeLabel_e7ffc6"
      >
        <input
          class="_hiddenRadio_e7ffc6"
          name="theme-mode"
          type="radio"
          value="system"
        />
        <span
          class="_modeButton_e7ffc6"
        >
          <span
            aria-hidden="true"
            class="_modeIcon_e7ffc6"
          >
            💻
          </span>
          <span>
            System
          </span>
        </span>
      </label>
    </div>
  </fieldset>
  <fieldset
    class="_fieldset_e7ffc6"
  >
    <legend
      class="_legend_e7ffc6"
    >
      Colour palette
    </legend>
    <div
      aria-label="Colour palette"
      class="_paletteSwatches_e7ffc6"
      role="radiogroup"
    >
      <label
        title="Default – Calm indigo/violet tones"
      >
        <input
          aria-label="Default palette – Calm indigo/violet tones"
          checked=""
          class="_hiddenRadio_e7ffc6"
          name="palette"
          type="radio"
          value="default"
        />
        <span
          aria-hidden="true"
          class="_paletteSwatch_e7ffc6 _paletteSwatchActive_e7ffc6"
          style="--swatch-accent: #4f46e5; --swatch-accent-light: #ede9fe;"
        />
      </label>
      <label
        title="Ocean – Cool teal and cyan tones"
      >
        <input
          aria-label="Ocean palette – Cool teal and cyan tones"
          class="_hiddenRadio_e7ffc6"
          name="palette"
          type="radio"
          value="ocean"
        />
        <span
          aria-hidden="true"
          class="_paletteSwatch_e7ffc6"
          style="--swatch-accent: #0891b2; --swatch-accent-light: #cffafe;"
        />
      </label>
      <label
        title="Forest – Warm green and emerald tones"
      >
        <input
          aria-label="Forest palette – Warm green and emerald tones"
          class="_hiddenRadio_e7ffc6"
          name="palette"
          type="radio"
          value="forest"
        />
        <span
          aria-hidden="true"
          class="_paletteSwatch_e7ffc6"
          style="--swatch-accent: #059669; --swatch-accent-light: #dcfce7;"
        />
      </label>
      <label
        title="Sunset – Warm amber and orange tones"
      >
        <input
          aria-label="Sunset palette – Warm amber and orange tones"
          class="_hiddenRadio_e7ffc6"
          name="palette"
          type="radio"
          value="sunset"
        />
        <span
          aria-hidden="true"
          class="_paletteSwatch_e7ffc6"
          style="--swatch-accent: #d97706; --swatch-accent-light: #fffbeb;"
        />
      </label>
    </div>
  </fieldset>
</div>
`;
